--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,9 @@
 	<h1>blog users!</h1>
 
 	<!--  TODO - list all users, with links to their blog pages -->
+	<ul>
+		<li th:each ="u : ${users}"><a th:href="'/' + ${u.username}" th:text="${u.username}"></a></li>
+	</ul>
 
 </body>
 </html>
