--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -1,24 +1,39 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org/">
 <head th:fragment="dochead">
-	<link th:href="@{/css/normalize.css}" rel="stylesheet" />
-	<link th:href="@{/css/styles.css}" rel="stylesheet" />
-	<title>Blogz</title>
+<link th:href="@{/css/normalize.css}" rel="stylesheet" />
+<link th:href="@{/css/styles.css}" rel="stylesheet" />
+<title>Blogz</title>
 </head>
 
 <body>
 
-<nav th:fragment="navigation">
-	<ul id="user-account">
-	    <li><a href="/login">login</a></li>
-	    <li><a href="/logout">logout</a></li>
-	</ul>
-	<ul>
-        <li><a href="/">home</a></li>
-        <li><a href="/blog">all posts</a></li>
-        <li><a href="/blog/newpost">new post</a></li>
-    </ul>
-</nav>
+	<nav th:fragment="navigation">
+		<ul id="user-account">
+			<li><a href="/login">login</a></li>
+			<li><a href="/logout">logout</a></li>
+		</ul>
+		<ul>
+			<li><a href="/">home</a></li>
+			<li><a href="/blog">all posts</a></li>
+			<li><a href="/blog/newpost">new post</a></li>
+		</ul>
+	</nav>
+
+	<div th:fragment="pagination">
+		<div>
+			<div th:if="${prev_page} &gt; 0">
+				<a th:href="'/blog/' + '?page=' + ${prev_page}">&lt;
+					prev</a>
+			</div>
+			<div th:if="${prev_page &gt; 0 and next_page &gt; 0}">&nbsp;&nbsp;
+				| &nbsp;&nbsp;</div>
+			<div th:if="${next_page} &gt; 0">
+				<a th:href="'/blog/' + '?page=' + ${next_page}">next
+					&gt;</a>
+			</div>
+		</div>
+	</div>
 
 </body>
 </html>
