commented out pagination fragment

--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -20,7 +20,7 @@
 		</ul>
 	</nav>
 
-	<div th:fragment="pagination">
+<!-- 	<div th:fragment="pagination">
 		<div>
 			<div th:if="${prev_page} &gt; 0">
 				<a th:href="'/blog/' + '?page=' + ${prev_page}">&lt;
@@ -33,7 +33,7 @@
 					&gt;</a>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 </body>
 </html>
