--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org/">
 <head th:fragment="dochead">
 <link th:href="@{/css/normalize.css}" rel="stylesheet" />
-<link th:href="@{/css/styles.css}" rel="stylesheet" />
+<link th:href="@{/css/style.css}" rel="stylesheet" />
 <title>Blogz</title>
 </head>
 
